--- a/sufala_slot/style.css
+++ b/sufala_slot/style.css
@@ -5,12 +5,24 @@
   box-sizing: border-box;
 }
 
+
 body {
-    font-family: 'Poppins', sans-serif;
-    color: #ffffff;
-    background: #F7F3EA;
-  
+  font-family: Arial, sans-serif;
+  padding: 20px;
+  color: #000000;
+    background: #fffb90;
 }
+
+section {
+  margin-bottom: 30px;
+}
+
+button {
+  margin: 10px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
 
 h1, h2, h3 {
   color: #ffc85c;
@@ -133,6 +145,10 @@ a {
   margin-top: 30px;
 }
 
+.product-grid p{
+  color: aliceblue;
+}
+
 .product-card {
   background: #00292D;
   padding: 20px;
@@ -152,6 +168,10 @@ a {
   margin-bottom: 10px;
 }
 
+.product-card {
+  color: aliceblue;
+}
+
 /* Reviews Section */
 .reviews {
   padding: 50px 20px;
@@ -166,13 +186,271 @@ a {
   margin-top: 30px;
 }
 
+.reviews-grid p{
+  color: aliceblue;
+}
+
 .review-card {
   background: #123;
   padding: 20px;
   border-radius: 10px;
 }
 
+/* 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
+:root {
+  --dark-body: #3a3a4f; 
+  --dark-main: #121221; 
+  --dark-second: #6e6e80; 
+  --dark-hover: #292b39; 
+  --dark-text: #e0e0e0; 
+
+  --light-body: #f7f8fc; 
+  --light-main: #ffffff; 
+  --light-second: #dcdce0; 
+  --light-hover: #f2f4f9; 
+  --light-text: #212121; 
+
+  --blue: #004080; 
+  --white: #ffffff; 
+
+  --shadow: rgba(0, 0, 0, 0.2) 0px 7px 29px 0px; 
+
+  --font-family: 'Inter', serif; 
+}
+
+.dark {
+  --bg-body: var(--dark-body);
+  --bg-main: var(--dark-main);
+  --bg-second: var(--dark-second);
+  --color-hover: var(--dark-hover);
+  --color-txt: var(--dark-text);
+}
+
+.light {
+  --bg-body: var(--light-body);
+  --bg-main: var(--light-main);
+  --bg-second: var(--light-second);
+  --color-hover: var(--light-hover);
+  --color-txt: var(--light-text);
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  font-family: var(--font-family);
+  background-color: var(--bg-body);
+} */
+
+.calendar {
+  height: max-content;
+  width: max-content;
+  background-color: var(--bg-main);
+  border-radius: 30px;
+  padding: 20px;
+  position: relative;
+  overflow: hidden;
+}
+
+.light .calendar {
+  box-shadow: var(--shadow);
+}
+
+.calendar-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 25px;
+  font-weight: 600;
+  color: var(--color-txt);
+  padding: 10px;
+}
+
+.calendar-body {
+  padding: 10px;
+}
+
+.calendar-week-day {
+  height: 50px;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  font-weight: 600;
+}
+
+.calendar-week-day div {
+  display: grid;
+  place-items: center;
+  color: #FF4B4B;
+}
+
+.calendar-days {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 2px;
+  color: var(--color-txt);
+}
+
+.calendar-days div {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  position: relative;
+  cursor: pointer;
+  animation: to-top 1s forwards;
+}
+
+.calendar-days div:hover {
+  background-color: var(--light-hover); 
+  border-radius: 10px; 
+  transition: background-color 0.3s ease; 
+}
+
+.dark .calendar-days div:hover {
+  background-color: var(--dark-hover); 
+}
+
+.calendar-days div span {
+  position: absolute;
+}
+
+.calendar-days div.curr-date span {
+  display: none;
+}
+
+.month-picker {
+  padding: 5px 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #FF4B4B;
+}
+
+.month-picker:hover {
+  background-color: var(--color-hover);
+}
+
+.year-picker {
+  display: flex;
+  align-items: center;
+}
+
+.year-change {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  margin: 0 10px;
+  cursor: pointer;
+}
+
+.year-change:hover {
+  background-color: var(--color-hover);
+}
+
+.calendar-footer {
+  padding: 10px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.toggle {
+  display: flex;
+}
+
+.toggle span {
+  margin-right: 10px;
+  color: var(--color-txt);
+}
+
+.dark-mode-switch {
+  position: relative;
+  width: 48px;
+  height: 25px;
+  border-radius: 14px;
+  background-color: var(--bg-second);
+  cursor: pointer;
+}
+
+.dark-mode-switch-ident {
+  width: 21px;
+  height: 21px;
+  border-radius: 50%;
+  background-color: var(--bg-main);
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  transition: left 0.2s ease-in-out;
+}
+
+.dark .dark-mode-switch .dark-mode-switch-ident {
+  top: 2px;
+  left: calc(2px + 50%);
+}
+
+.month-list {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: var(--bg-main);
+  padding: 20px;
+  grid-template-columns: repeat(3, auto);
+  gap: 5px;
+  display: grid;
+  transform: scale(1.5);
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.month-list.show {
+  transform: scale(1);
+  visibility: visible;
+  pointer-events: visible;
+  transition: all 0.2s ease-in-out;
+}
+
+.month-list > div {
+  display: grid;
+  place-items: center;
+}
+
+.month-list > div > div {
+  width: 100%;
+  padding: 5px 20px;
+  border-radius: 10px;
+  text-align: center;
+  cursor: pointer;
+  color: var(--color-txt);
+}
+
+.month-list > div > div:hover {
+  background-color: var(--color-hover);
+}
+
+@keyframes to-top {
+  0% {
+      transform: translateY(100%);
+      opacity: 0;
+  }
+  100% {
+      transform: translateY(0);
+      opacity: 1;
+  }
+}
 
 
 
@@ -447,7 +725,6 @@ a {
     gap: 10px;
     font-size: 10px;
   }
- 
 
   .hero-text h2 {
     font-size: 12px;
@@ -489,6 +766,7 @@ a {
   .product-card img{
     width: 60px;
   }
+  
   
 
 
